Refine experience on mobile, fix bugs

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -27,6 +27,7 @@ $hamburger-layer-color: var(--text-color--lighter);
 	z-index: 800;
 	background-color: var(--white);
 	overflow: hidden;
+	height: 60px;
 }
 
 .Header__logo {
