--- a/src/sections/technologyHeader/TechnologyHeader.css
+++ b/src/sections/technologyHeader/TechnologyHeader.css
@@ -36,5 +36,6 @@
 		font-size: 2.1rem;
 		letter-spacing: 10px;
 		color: rgba(170, 144, 231, 0.274);
+		margin-right: 0;
 	}
 }
